@@ -819,18 +819,21 @@ if ( strlen ( $conflicts ) ) {
 <?php
 // user can confirm conflicts
   echo "<form name=\"confirm\" method=\"post\">\n";
+  if ( ! is_array ( $_POST ) && is_array ( $HTTP_POST_VARS ) )
+    $_POST = $HTTP_POST_VARS;
   while (list($xkey, $xval)=each($_POST)) {
     if (is_array($xval)) {
       $xkey.="[]";
       while (list($ykey, $yval)=each($xval)) {
         if (get_magic_quotes_gpc())
           $yval = stripslashes($yval);
+        $yval = htmlentities  ( $yval );
         echo "<input type=\"hidden\" name=\"$xkey\" value=\"$yval\" />\n";
       }
     } else {
-      if (get_magic_quotes_gpc()) {
+      if (get_magic_quotes_gpc())
         $xval = stripslashes($xval);
-      }
+      $xval = htmlentities ( $xval );
       echo "<input type=\"hidden\" name=\"$xkey\" value=\"$xval\" />\n";
     }
   }
